# diffing_obfuscation_dataset

./: README.md  TODO.md  fname_export.py  pyproject.toml
precompiled/: links.json
src/obfu_dataset/: __init__.py  __main__.py  admin.py  dataset.py  projects.py  types.py
src/obfu_dataset/obfuscators/: __init__.py  ollvm.py  tigress.py
src/obfu_dataset/precompiled/: links.json  precompiled_links.json
